--- a/ssydx/blog/templates/blog/article.html
+++ b/ssydx/blog/templates/blog/article.html
@@ -2,9 +2,9 @@
 
 
 {% block main %}
-    <main>
+<div class="main">
         <h1>{{article.title}}</h1>
         <p>{{article.desc}}</p>
         {{ article.content|safe }}
-    </main>
+</div>
 {% endblock %}
