--- a/ssydx/blog/templates/blog/index.html
+++ b/ssydx/blog/templates/blog/index.html
@@ -2,9 +2,7 @@
 
 
 {% block nav-container %}
-    <div class="nav-container" style="padding-left: 1rem;">
-        <div style="padding: auto; margin: auto; font-size: 3rem;">首页</div>
-    </div>
+    <div style="text-align: center; font-size: 3rem;">首页</div>
 {% endblock nav-container %}
 
 {% block main-wrapper %}
