--- a/ssydx/blog/static/blog/css/page.css
+++ b/ssydx/blog/static/blog/css/page.css
@@ -120,41 +120,37 @@ a {
 }
 
 .home-icon {
-    width: 1.5em;
-    height: 1.5em;
-    flex: 0 0 auto;
+    height: var(--nav-h);
 }
 
 .path {
-    line-height: var(--h-4);
+    flex: 1 1 auto;
+    line-height: var(--nav-h);
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: left;
     gap: var(--gy-2) var(--gx-2);
-    max-height: calc(2 * var(--h-4) + var(--gy-2));
+    height: var(--nav-h);
     overflow-y: auto;
-}
-.path > a {
-    display: flex;
-    gap: var(--gy-0) var(--gx-2);
     font-family: heiti;
     font-weight: 200;
 }
 .path > a:hover {
     font-weight: 300;
 }
-.path > a:not(a:first-child)::before {
+.path > a:not(:first-child)::before {
     content: '»';
+    margin-right: var(--h-2);
     font-weight: 200;
 }
 
 .dividingline {
-    content: '';
     flex: 0 0 auto;
     width: var(--w-1);
     background-color: black;
-    border-radius: 0.25em;
+    border-radius: calc(var(--w-1) / 2);
+    height: var(--nav-h);
 }
 
 .nav-right > .form-search {
@@ -163,7 +159,7 @@ a {
     align-items: center;
     justify-content: right;
     gap: var(--gy-0) var(--gx-2);
-    height: var(--h-4);
+    height: var(--nav-h);
 }
 .nav-right > .form-theme {
     flex: 0 0 auto;
@@ -171,18 +167,18 @@ a {
     align-items: stretch;
     justify-content: right;
     gap: var(--gy-0) var(--gx-2);
-    height: var(--h-4);
+    height: var(--nav-h);
 }
 .nav-right > .form-search > * {
     border: var(--bw-3) solid rgba(0, 0, 0, 0.5);
-    font-size: calc(var(--h-4) * 3 / 5);
+    font-size: calc(var(--nav-h) * 3 / 5);
     padding: var(--py-0) var(--px-2);
-    height: var(--h-4);
+    height: var(--nav-h);
 }
 .nav-right > .form-search > .searchbox {
     border-radius: calc(var(--px-4) / 2);
     background-color: white;
-    width: calc(var(--px-4) + var(--w-5));
+    width: calc(var(--px-4) + var(--w-6));
     transition: flex 400ms ease;
     font-family: songti;
     font-weight: 200;
@@ -204,16 +200,16 @@ a {
     font-weight: 200;
 }
 .nav-right > .form-theme > .themelabel {
-    line-height: var(--h-4);
+    line-height: var(--nav-h);
     font-family: heiti;
     font-weight: 200;
 }
 .nav-right > .form-theme > .selectlist {
-    font-size: calc(var(--h-4) * 3 / 5);
+    font-size: calc(var(--nav-h) * 3 / 5);
     border: var(--bw-3) solid rgba(0, 0, 0, 0.5);
     border-radius: calc(var(--px-4) / 4);
     background-color: white;
-    height: var(--h-4);
+    height: var(--nav-h);
     font-family: songti;
     font-weight: 200;
 }
