--- a/ssydx/blog/templates/blog/articles.html
+++ b/ssydx/blog/templates/blog/articles.html
@@ -2,29 +2,35 @@
 
 
 {% block aside_left1 %}
+<div class="aside-left">
         {% for article in articles %}
             <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
         {% endfor %}
-{% endblock %}
+</div>
+{% endblock aside_left1 %}
 
 {% block aside_left2 %}
+<div class="aside-left">
         {% for article in articles %}
             <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
         {% endfor %}
-{% endblock %}
+</div>
+{% endblock aside_left2 %}
 
 {% block aside_left3 %}
+<div class="aside-left">
         {% for article in articles %}
             <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
         {% endfor %}
-{% endblock %}
+</div>
+{% endblock aside_left3 %}
 
 {% block main %}
-    <main>
+<div class="main">
         {% with article=articles|first %}
             <h1>{{article.title}}</h1>
             <p>{{article.desc}}</p>
             {{ article.content|safe }}
         {% endwith %}
-    </main>
+</div>
 {% endblock main %}
