--- a/ssydx/templates/origin.html
+++ b/ssydx/templates/origin.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% block title %}<title>
+    <title>{% block title %}
         网站名称
-    </title>{% endblock %}
+    {% endblock %}</title>
     {% block base %}{% endblock base %}
     {% block link-icon %}{% endblock link-icon %}
     {% block style %}<style>
