--- a/ssydx/templates/origin.html
+++ b/ssydx/templates/origin.html
@@ -8,6 +8,8 @@
     {% endblock %}</title>
     {% block base %}{% endblock base %}
     {% block link-icon %}{% endblock link-icon %}
+    {% block link-stylesheet %}{% endblock link-stylesheet %}
+    {% block head-script %}{% endblock head-script %}
     {% block style %}<style>
             h1 {
                 text-align: center;
@@ -20,13 +22,11 @@
                 color: red;
             }
     </style>{% endblock style %}
-    {% block link-stylesheet %}{% endblock link-stylesheet %}
-    {% block head-script %}{% endblock head-script %}
     {% block head-other %}{% endblock head-other %}
 </head>
 <body>
     {% block body %}
-        <span>ssydx-{% now 'm-d-Y h:i:s' %}</span>
+        <span>{{ request.user }}-{% now 'm-d-Y h:i:s' %}</span>
         <h1>{% lorem 5 w %}</h1>
         {% lorem 5 p random %}
     {% endblock body %}
