--- a/BookStore/index/templates/index/login.html
+++ b/BookStore/index/templates/index/login.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>test1</h1>
-    <p>{{ name }}</p>
-    <p>{{ cnt }}</p>
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="提交">
+    </form>
 </body>
 </html>
