--- a/learn/sass/css/运算符.css
+++ b/learn/sass/css/运算符.css
@@ -1,3 +1,43 @@
 .p1 {
-  height: 1.4233333333cm;
+  content: true;
+}
+
+.p2 {
+  content: true;
+}
+
+.p3 {
+  content: 53.7952755906px;
+}
+
+.p4 {
+  content: -21.7952755906px;
+}
+
+.p5 {
+  content: 256px;
+}
+
+.p6 {
+  content: 1;
+}
+
+.p7 {
+  content: false;
+}
+
+.p8 {
+  content: false;
+}
+
+.p9 {
+  content: "a";
+}
+
+.p10 {
+  content: "ab";
+}
+
+.p11 {
+  content: ab;
 }
