--- a/learn/sass/other/css/ssydx.css
+++ b/learn/sass/other/css/ssydx.css
@@ -29,13 +29,12 @@
   --ssydx-danger: #dc3545;
   --ssydx-light: #f8f9fa;
   --ssydx-dark: #343a40;
-  --ssydx-blue-100: #cce5ff;
-  --ssydx-blue-200: #99caff;
-  --ssydx-blue-300: #66b0ff;
-  --ssydx-blue-400: #3395ff;
-  --ssydx-blue-500: #007bff;
-  --ssydx-blue-600: #0062cc;
-  --ssydx-blue-700: #004a99;
-  --ssydx-blue-800: #003166;
-  --ssydx-blue-900: #001933;
+  --ssydx-primary-rgb: 0, 123, 255;
+  --ssydx-secondary-rgb: 108, 117, 125;
+  --ssydx-success-rgb: 40, 167, 69;
+  --ssydx-info-rgb: 23, 162, 184;
+  --ssydx-warning-rgb: 255, 193, 7;
+  --ssydx-danger-rgb: 220, 53, 69;
+  --ssydx-light-rgb: 248, 249, 250;
+  --ssydx-dark-rgb: 52, 58, 64;
 }
