--- a/learn/vue/ssydx/src/assets/main.css
+++ b/learn/vue/ssydx/src/assets/main.css
@@ -3,4 +3,25 @@
 }
 body {
     margin: 0;
+    padding: 0;
 }
+:root,[data-theme="light"] {
+    --tt-color: black;
+    --bg-color: white;
+}
+[data-theme="dark"] {
+    --tt-color: white;
+    --bg-color: black;
+}
+a {
+    text-decoration: none;
+    color: var(--tt-color);
+}
+ul {
+    margin: 0;
+    padding: 0;
+}
+li {
+    list-style: none;
+}
+
